--- a/doc/cie/cie.tex
+++ b/doc/cie/cie.tex
@@ -6,7 +6,7 @@
 \usepackage{graphicx}
 \usepackage{mathpartir}
 \usepackage{fancyvrb}
-
+\usepackage{url}
 \usepackage{ifpdf}
 
 \ifpdf
@@ -35,7 +35,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
-\title{We need a good title}
+\title{RZ: a Tool for Bringing\\
+  Constructive and Computable Mathematics\\
+  Closer to Programming Practice}
 \author{
   Andrej Bauer\inst{1} \and
   Christopher A. Stone\inst{2}}
@@ -51,7 +53,25 @@
 \maketitle
 
 \begin{abstract}
-  RZ is RZ.
+  We show that realizability is not only a fundamental tool in logic
+  and computability, but also has direct application to the design and
+  implementation of programs: it can produce a description of the data
+  structure (a code interface) directly corresponding to a
+  mathematical theory.
+
+  Our claims are supported by an implementation of a tool, called RZ,
+  which is to serve as a bridge between the world of constructive
+  mathematics and the programming world. By using the realizability
+  interpretation of constructive mathematics, RZ automatically
+  translates specifications in constructive logic into standard
+  interface code in a programming language, currently Objective Caml.
+
+  RZ was specifically designed as a lightweight system, despite
+  supporting a very rich input language that allows descriptions of
+  complex mathematical structures. RZ does not extract code from
+  proofs, but allows the programmer to implement the specifications in
+  any fashion, ranging from hand-writen code to code extracted from
+  proofs by other tools.
 \end{abstract}
 
 \input{introduction.tex}
