--- a/doc/cie/rzbib.bib
+++ b/doc/cie/rzbib.bib
@@ -113,6 +113,15 @@ KEY="Peyton Jones"}
   series = 	 {Studies in Logic and the Foundations of Mathematics}
 }
 
+@Book{Troelstra:van-Dalen:88:2,
+  author = 	 {A.S. Troelstra and D. van Dalen},
+  title = 	 {Constructivism in Mathematics, An Introduction, Vol. 2},
+  publisher = 	 {North-Holland},
+  year = 	 {1988},
+  number = 	 {123},
+  series = 	 {Studies in Logic and the Foundations of Mathematics}
+}
+
 @InProceedings{pfenning01:_inten_exten_proof_irrel_modal_type_theor,
   author = 	 {F. Pfenning},
   title = 	 {Intensionality, Extensionality, and Proof Irrelevance in Modal Type Theory},
@@ -297,15 +306,6 @@ KEY="Peyton Jones"}
    YEAR=1990,
    PAGES="341--354"}
 
-@Book{Troelstra:van-Dalen:88:1,
-  author = 	 {A.S. Troelstra and D. van Dalen},
-  title = 	 {Constructivism in Mathematics, An Introduction, Vol. 1},
-  publisher = 	 {North-Holland},
-  year = 	 {1988},
-  number = 	 {121},
-  series = 	 {Studies in Logic and the Foundations of Mathematics}
-}
-
 @incollection{benl98:_proof_theor_work,
     author = "H. Benl and U. Berger and H. Schwichtenberg and M. Seisenberger and W. Zuber",
     title = "Proof Theory at Work: Program Development in the {M}inlog System",
@@ -355,5 +355,63 @@ KEY="Peyton Jones"}
   publisher =    {Springer-Verlag},
   volume =       {279},
   series =       {Grundlehren der math. Wissenschaften}
+}
+
+@TechReport{Escardo:97,
+  author =       "Escard\'o, M.H.",
+  title =        "{PCF} extended with real numbers: A domain-theoretic
+                  approach to higher-order exact real number computation",
+  institution =  "Department of Computer Science, University of Edinburgh",
+  year =         1997,
+  number =       "ECS-LFCS-97-374",
+  month =        "December",
+  note =         "PhD thesis at Imperial College of the University of
+                    London, 1996.\ \newline
+\url{http://www.dcs.ed.ac.uk/lfcsreps/EXPORT/97/ECS-LFCS-97-374/}"
+}
+
+@InProceedings{marcial-romero04:_seman,
+  author = 	 {J.R. Marcial-Romero and M.H. Escard{\'o}},
+  title = 	 {Semantics of a sequential language for exact real-number computation},
+  booktitle = 	 {Proceedings of the 19th Annual IEEE Symposium on Logic in Computer Science},
+  pages =	 {426--435},
+  year =	 2004,
+  month =	 {July}
+}
+
+@Book{borodin75,
+  author =	 {A. Borodin and J.I. Monro},
+  title = 	 {The computational complexity of algebraic and numeric problems},
+  publisher = 	 {New York, London, Amsterdam : American Elsevier},
+  year = 	 1975,
+  number =	 1,
+  series =	 {Elsevier computer science library : Theory of computation series}
+}
+
+@Book{nordstroem90:_progr_martin_type_theor,
+  author =	 {B. Nordstr{\"o}m and K. Petersson and J.M. Smith},
+  title = 	 {Programming in Martin-L{\"of}'s Type Theory},
+  publisher = 	 {Oxford University Press},
+  year = 	 1990
+}
+
+@BOOK{JacobsB:cltt,
+ author = "Jacobs, B.",
+ title = "Categorical Logic and Type Theory",
+ publisher = "Elsevier Science",
+ year = 1999
+}
+
+@article{sannella92:_towar,
+ author = {D. Sannella and S. Sokolowski and A. Tarlecki},
+ title = {Toward formal development of programs from algebraic specifications: parameterisation revisited},
+ journal = {Acta Informatica},
+ volume = 29,
+ number = 9,
+ year = 1992,
+ issn = {0001-5903},
+ pages = {689--736},
+ publisher = {Springer-Verlag New York, Inc.},
+ address = {Secaucus, NJ, USA},
 }
 
