--- a/doc/cie/logic.tex
+++ b/doc/cie/logic.tex
@@ -26,8 +26,7 @@ the theory of a vector space parameterized by a field of scalars,
 or the theory of the real numbers parameterized by a model of the
 natural numbers.
 Following Sannella, Sokolowski, and 
-Tarlecki\footnote{``parameterized (program specification) $\not=$ (parameterized pro- 
-gram) specification''}~\cite{sannella+:92} RZ supports two forms of parameterization.  A theory of a parameterized implementation
+Tarlecki\footnote{``parameterized (program specification) $\neq$ (parameterized program) specification''}~\cite{sannella92:_towar} RZ supports two forms of parameterization.  A theory of a parameterized implementation
 $\idarrow{\im}{\ith_1}{\ith_2}$ describes a uniform family of models (i.e.,
 a single implementation; a functor in OCaml) that maps every
 model~$\im$ satisfying~$\ith_1$ to a model of~$\ith_2$.  In contrast,
@@ -45,6 +44,7 @@ Further, in some cases $\iTH(\im_1)$ might be implementable while $\iTH(\im_2)$ 
 		    & \iP \ibar \iselect{\im}{\iP}&\mbox{Predicate/proposition names}\\
 		  | & \itrue \ | \ \ifalse \ibar \inot{\ip_1} \ibar {\ip_1}{\land}{\ip_2} \ibar 
 		       {\ip_1}{\lor}{\ip_2}\ | \ {\ip_1}{\Rightarrow}{\ip_2} & \mbox{Predicate logic}\\
+                  | & \ipcases{\ie}{\il_1}{\ix_1}{\ip_1}{\il_n}{\ix_n}{\ip_n} & \mbox{Propositional case}\\
 		  | & \ilambda{\ix}{\is}{\ip}  \ibar \iapp{\ip}{\ie} & \mbox{Predicates and application}\\
 		  | & \iequal{\ie_1}{\ie_2} & \mbox{Term equality}\\
 		  | & \iforall{\ix}{\is}{\ip}  \ibar 
